--- a/exec5.yaml
+++ b/exec5.yaml
@@ -13,7 +13,7 @@ spec:
       args: 
         - sleep
         - 1d
-    - name: alpine
+    - name: alpine2
       image: alpine:3.18
       args: 
         - sleep
