--- a/practice/repilcaset.yaml/repicaset.yaml
+++ b/practice/repilcaset.yaml/repicaset.yaml
@@ -11,7 +11,7 @@ spec:
     matchLabels: key
   template:
     metadata:
-      name: repi
+      name: replicapod
     spec:
       - containers:
           name: httpd
