--- a/practice/repilcaset.yaml/jenkins-pr.yaml
+++ b/practice/repilcaset.yaml/jenkins-pr.yaml
@@ -4,24 +4,24 @@ kind: ReplicaSet
 metadata:
   name: jenkins-rs
 spec:
-  minReadySeconds: 2
+  minReadySeconds: 5
   replicas: 5
   selector:
     matchLabels:
       app: jenkins
   template:
     metadata:
-      name: jenikns
+      name: jenkins
       labels:
-        app: jenikns
+        app: jenkins
     spec:
       containers:
         - name: jenkins
-          image: jenkins/jenkins
+          image: jenkins/jenkins:lts-jdk11
           ports:
             - containerPort: 8080
         - name: alpine
-          image: alpine:3.18
-          command:
+          image: alpine:3
+          args:
             - sleep
             - 1d
