--- a/practice/repilcaset.yaml/jenkins-rs.yaml
+++ b/practice/repilcaset.yaml/jenkins-rs.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: jenkins
-          image: jenkins/jenkins
+          image: jenkins/jenkins:2.401.1-lts
           ports:
             - containerPort: 8080
         - name: alpine
