--- a/practice/repilcaset.yaml/helthchecks.yaml
+++ b/practice/repilcaset.yaml/helthchecks.yaml
@@ -1,4 +1,19 @@
 ---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: alpinepod
+  labels: 
+    name: alpine
+spec:
+  containers:
+    - name: alpine
+      image: alpine:3.18
+      command:
+        - sleep
+        - 1d
+      
+---
 apiVersion: v1	
 kind: Service
 metadata: 
