--- a/practice/repilcaset.yaml/helthchecks.yaml
+++ b/practice/repilcaset.yaml/helthchecks.yaml
@@ -59,10 +59,9 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 20
-            exec:
-              command:
-                - sleep
-                - 10MM
+            httpGet:
+              path: /
+              port: 80
           readinessProbe:
             failureThreshold: 3
             initialDelaySeconds: 1
