--- a/jobs.yaml/deployement.yaml/deployements.yaml
+++ b/jobs.yaml/deployement.yaml/deployements.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  minReadySeconds: 3
+  minReadySeconds: 5
   replicas: 3
   selector:
     matchLabels:
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: httpd
           ports:
             - containerPort: 80
           livenessProbe:
