--- a/practice/deployement.yaml/deployements.yaml
+++ b/practice/deployement.yaml/deployements.yaml
@@ -23,8 +23,8 @@ spec:
         ver: "1.23"
     spec:
       containers:
-        - name: nginx
-          image: nginx
+        - name: httpd
+          image: httpd
           ports:
             - containerPort: 80
           livenessProbe:
