--- a/practice/deployement.yaml/deployements.yaml
+++ b/practice/deployement.yaml/deployements.yaml
@@ -3,6 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: deploy-check
+  annotations:
+    kubernetes.io/change-cause
+
   labels:
     app: nginx
 spec:
