--- a/practice/demonset.yaml/demonsets.yaml
+++ b/practice/demonset.yaml/demonsets.yaml
@@ -4,7 +4,7 @@ kind: DaemonSet
 metadata:
   name: fluentd
   annotations:
-    kubernetes.io/change-cause: "update to latest"
+    kubernetes.io/change-cause: "update to debian 2"
   labels:
     app: fluentd
 spec:
@@ -20,5 +20,5 @@ spec:
     spec:
       containers:
         - name: fluentd
-          image: fluentd:latest
+          image: fluentd:v1.16.0-debian-1.0
    
