--- a/practice/secrets.yaml/abhi-secrets.yaml
+++ b/practice/secrets.yaml/abhi-secrets.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-sec
+  name: mysql-secret
   labels:
     app: mysql
     type: secret
 data:
-  MYSQL_ROOT_PASSWORD: c29tYW5hdGg=
+  MYSQL_ROOT_PASSWORD: cm9vdHJvb3Q=
   MYSQL_DATABASE: bm9w
-  MYSQL_USER: c2hpdmE=
+  MYSQL_USER: bWFpbmE=
   MYSQL_PASSWORD: c29tYW5hdGg=
