--- a/practice/secrets.yaml/mysql-pod-sec.yaml
+++ b/practice/secrets.yaml/mysql-pod-sec.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mysql
+  labels:
+    app: mysql
+    type: pod
 spec:
   containers:
     - name: mysql
@@ -12,4 +15,3 @@ spec:
       envFrom:
         - secretRef:
             name: mysql-sec
-            optional: false
