--- a/practicedemo/Deemonset/Demon.yaml
+++ b/practicedemo/Deemonset/Demon.yaml
@@ -4,7 +4,7 @@ kind: DaemonSet
 metadata:
   name: fluentd-ds
   annotations:
-    kubernetes.io/change-cause: "update to latest"
+    kubernetes.io/change-cause: "update to httpd"
 spec:
   minReadySeconds: 5
   selector:
@@ -18,4 +18,4 @@ spec:
     spec:
       containers:
         - name: fluentd
-          image: fluentd:latest
+          image: httpd:latest
