--- a/practicedemo/Deployment/exp1/svc.yaml
+++ b/practicedemo/Deployment/exp1/svc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-svc
-  namespace: prod
+  namespace: dev
 spec:
   type: LoadBalancer
   selector:
