--- a/practicedemo/statefullsets.yaml/nginx-svc.yaml
+++ b/practicedemo/statefullsets.yaml/nginx-svc.yaml
@@ -1,15 +1,14 @@
----
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-svc
+  labels:
+    app: nginx
 spec:
   selector:
     app: nginx
   type: ClusterIP
   clusterIP: None
   ports:
-    - name: nginx-svc
-      port: 80
-      targetPort: 80
-      protocol: TCP
+  - name: nginx-svc
+    port: 80
