--- a/practicedemo/helm/nopCommerce/nopCommerce/values.yaml
+++ b/practicedemo/helm/nopCommerce/nopCommerce/values.yaml
@@ -12,7 +12,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: "nop"
-fullnameOverride: "nopCommerce"
+fullnameOverride: "nopcommerce"
 
 serviceAccount:
   # Specifies whether a service account should be created
