--- a/practicedemo/kustomize/Dashboard/overlays/dev/kustomization.yaml
+++ b/practicedemo/kustomize/Dashboard/overlays/dev/kustomization.yaml
@@ -1,8 +1,8 @@
 # apiVersion: Kustomize.config.k8s.io/v1beta1 
 # kind: Kustomization
 ---
-bases:
-  - ../../bases
+resources:
+  - ../../base
 
 namespace: dev
 
