--- a/practicedemo/kustomize/Dashboard/overlays/qa/kustomization.yaml
+++ b/practicedemo/kustomize/Dashboard/overlays/qa/kustomization.yaml
@@ -1,9 +1,9 @@
 # apiVersion: Kustomize.config.k8s.io/v1beta1 
 # kind: Kustomization
 ---
-bases:
-  - ../../bases
-
+resources:
+  - ../../base
+  
 namespace: uat
 
 nameSuffix: uat-
