--- a/practicedemo/kustomize/Dashboard/base/deployment.yaml
+++ b/practicedemo/kustomize/Dashboard/base/deployment.yaml
@@ -11,7 +11,7 @@ spec:
       app: dashboard
   strategy:
     type: RollingUpdate
-    RollingUpdate:
+    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
   template:
