--- a/practicedemo/kustomize/Dashboard/base/hpa.yaml
+++ b/practicedemo/kustomize/Dashboard/base/hpa.yaml
@@ -3,16 +3,11 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: dashboard-hpa
 spec:
+  minReplicas: 1
+  maxReplicas: 10
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: dashboard-dpl
-  minReplicas: 1
-  maxReplicas: 10
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 60
+  targetCPUUtilizationPercentage: 60
+
