--- a/practicedemo/kustomize/Dashboard/base/kustomization.yaml
+++ b/practicedemo/kustomize/Dashboard/base/kustomization.yaml
@@ -3,4 +3,6 @@ resources:
   - deployment.yaml
   - service.yaml
   - hpa.yaml
-  - namespaces.yaml
+  - devnamespaces.yaml
+  - uatnamespaces.yaml
+  - qanamespaces.yaml
