--- a/practicedemo/kustomize/Dashboard/base/kustomization.yaml
+++ b/practicedemo/kustomize/Dashboard/base/kustomization.yaml
@@ -3,6 +3,4 @@ resources:
   - deployment.yaml
   - service.yaml
   - hpa.yaml
-  - devnamespaces.yaml
-  - uatnamespaces.yaml
-  - qanamespaces.yaml
+  - namespaces.yaml
