--- a/practicedemo/kustomize/Dashboard/base/kustomization.yaml
+++ b/practicedemo/kustomize/Dashboard/base/kustomization.yaml
@@ -3,5 +3,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - hpa.yaml
-  - namespaces.yaml
-
+  - devnamespaces.yaml
+  - qanamespaces.yaml
+  - uatnamespaces.yaml
+  
